[package]
name = "mqtt_broker"
version = "0.1.0"
authors = ["heasummn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mqtt-codec = "0.3.0"
tokio-util = {version = "0.2.0", features = ["codec"]}
futures = "0.3.4"

[dependencies.tokio]
version = "0.2.11"
features = ['macros', 'tcp', 'rt-core', 'io-util', 'stream']